--- a/Energy_Consumption_Pred.ipynb
+++ b/Energy_Consumption_Pred.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -921,38 +922,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_drop_featureDrop = data_no_outliers_drop.drop(columns=['Leading_Current_Reactive_Power_kVarh', 'WeekStatus'])\n",
-    "print(data_drop_featureDrop.shape[1])"
+    "# data_drop_featureDrop = data_no_outliers_drop.drop(columns=['Leading_Current_Reactive_Power_kVarh', 'WeekStatus'])\n",
+    "# print(data_drop_featureDrop.shape[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_imputed_featureDrop = data_no_outliers_imputed.drop(columns=['Leading_Current_Reactive_Power_kVarh', 'WeekStatus'])\n",
-    "print(data_imputed_featureDrop.shape[1])"
+    "# data_imputed_featureDrop = data_no_outliers_imputed.drop(columns=['Leading_Current_Reactive_Power_kVarh', 'WeekStatus'])\n",
+    "# print(data_imputed_featureDrop.shape[1])"
    ]
   },
   {
@@ -971,61 +956,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mapping of categories to encoded values:\n",
+      "Mapping of categories to encoded values for 'Load_Type':\n",
       "0: 0\n",
       "1: 1\n",
       "2: 2\n",
-      "(25175, 10)\n"
+      "Columns in data_no_outliers_drop_encoded:\n",
+      "Index(['Id', 'date', 'Lagging_Current_Reactive.Power_kVarh',\n",
+      "       'Leading_Current_Reactive_Power_kVarh', 'CO2(tCO2)',\n",
+      "       'Lagging_Current_Power_Factor', 'Leading_Current_Power_Factor', 'NSM',\n",
+      "       'Load_Type', 'Usage_kWh', 'Day_of_week_Friday', 'Day_of_week_Monday',\n",
+      "       'Day_of_week_Saturday', 'Day_of_week_Sunday', 'Day_of_week_Thursday',\n",
+      "       'Day_of_week_Tuesday', 'Day_of_week_Wednesday', 'WeekStatus_Weekday',\n",
+      "       'WeekStatus_Weekend'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
    "source": [
     "label_encoder = LabelEncoder()\n",
     "\n",
-    "data_drop_featureDrop['Load_Type'] = label_encoder.fit_transform(data_drop_featureDrop['Load_Type'])\n",
+    "data_no_outliers_drop['Load_Type'] = label_encoder.fit_transform(data_no_outliers_drop['Load_Type'])\n",
     "\n",
-    "print(\"Mapping of categories to encoded values:\")\n",
+    "print(\"Mapping of categories to encoded values for 'Load_Type':\")\n",
     "for category, encoded_value in zip(label_encoder.classes_, label_encoder.transform(label_encoder.classes_)):\n",
     "    print(f\"{category}: {encoded_value}\")\n",
     "\n",
+    "data_no_outliers_drop_encoded = pd.get_dummies(data_no_outliers_drop, columns=['Day_of_week', \"WeekStatus\"])\n",
     "\n",
-    "print(data_drop_featureDrop.shape)"
+    "print(\"Columns in data_no_outliers_drop_encoded:\")\n",
+    "print(data_no_outliers_drop_encoded.columns)\n",
+    "\n",
+    "data_no_outliers_drop_encoded.to_csv('data_no_outliers_drop_encoded.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mapping of categories to encoded values:\n",
+      "Mapping of categories to encoded values for 'Load_Type':\n",
       "0: 0\n",
       "1: 1\n",
       "2: 2\n",
-      "(26995, 10)\n"
+      "Columns in data_no_outliers_imputed_encoded:\n",
+      "Index(['Id', 'date', 'Lagging_Current_Reactive.Power_kVarh',\n",
+      "       'Leading_Current_Reactive_Power_kVarh', 'CO2(tCO2)',\n",
+      "       'Lagging_Current_Power_Factor', 'Leading_Current_Power_Factor', 'NSM',\n",
+      "       'Load_Type', 'Usage_kWh', 'Day_of_week_Friday', 'Day_of_week_Monday',\n",
+      "       'Day_of_week_Saturday', 'Day_of_week_Sunday', 'Day_of_week_Thursday',\n",
+      "       'Day_of_week_Tuesday', 'Day_of_week_Wednesday', 'WeekStatus_Weekday',\n",
+      "       'WeekStatus_Weekend'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
    "source": [
     "label_encoder = LabelEncoder()\n",
     "\n",
-    "data_imputed_featureDrop['Load_Type'] = label_encoder.fit_transform(data_imputed_featureDrop['Load_Type'])\n",
+    "data_no_outliers_imputed['Load_Type'] = label_encoder.fit_transform(data_no_outliers_imputed['Load_Type'])\n",
     "\n",
-    "print(\"Mapping of categories to encoded values:\")\n",
+    "print(\"Mapping of categories to encoded values for 'Load_Type':\")\n",
     "for category, encoded_value in zip(label_encoder.classes_, label_encoder.transform(label_encoder.classes_)):\n",
     "    print(f\"{category}: {encoded_value}\")\n",
     "\n",
-    "print(data_imputed_featureDrop.shape)\n"
+    "data_no_outliers_imputed_encoded = pd.get_dummies(data_no_outliers_imputed, columns=['Day_of_week',\"WeekStatus\"])\n",
+    "\n",
+    "print(\"Columns in data_no_outliers_imputed_encoded:\")\n",
+    "print(data_no_outliers_imputed_encoded.columns)\n",
+    "\n",
+    "data_no_outliers_imputed_encoded.to_csv('data_no_outliers_imputed_encoded.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding Correlations Between Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'CO2(tCO2)', 'Leading_Current_Power_Factor', 'WeekStatus_Weekend'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#data_no_outliers_drop_encoded.drop(columns=['Id'], inplace=True)\n",
+    "#data_no_outliers_drop_encoded.drop(columns=['date'], inplace=True)\n",
+    "\n",
+    "correlation_matrix = data_no_outliers_drop_encoded.corr()\n",
+    "\n",
+    "highly_correlated_features = set()\n",
+    "for i in range(len(correlation_matrix.columns)):\n",
+    "    for j in range(i):\n",
+    "        if abs(correlation_matrix.iloc[i, j]) > 0.7:\n",
+    "            colname = correlation_matrix.columns[i]\n",
+    "            highly_correlated_features.add(colname)\n",
+    "\n",
+    "highly_correlated_features.discard('Usage_kWh')\n",
+    "data_drop_featureDrop = data_no_outliers_drop_encoded.drop(columns=highly_correlated_features)\n",
+    "\n",
+    "print(highly_correlated_features)\n",
+    "\n",
+    "data_drop_featureDrop.to_csv('data_drop_featureDrop.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'CO2(tCO2)', 'Leading_Current_Power_Factor', 'WeekStatus_Weekend'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#data_no_outliers_imputed_encoded.drop(columns=['Id'], inplace=True)\n",
+    "#data_no_outliers_imputed_encoded.drop(columns=['data'], inplace=True)\n",
+    "\n",
+    "correlation_matrix = data_no_outliers_imputed_encoded.corr()\n",
+    "\n",
+    "highly_correlated_features = set()\n",
+    "for i in range(len(correlation_matrix.columns)):\n",
+    "    for j in range(i):\n",
+    "        if abs(correlation_matrix.iloc[i, j]) > 0.7:\n",
+    "            colname = correlation_matrix.columns[i]\n",
+    "            highly_correlated_features.add(colname)\n",
+    "\n",
+    "highly_correlated_features.discard('Usage_kWh')\n",
+    "data_imputed_featureDrop = data_no_outliers_imputed_encoded.drop(columns=highly_correlated_features)\n",
+    "\n",
+    "print(highly_correlated_features)\n",
+    "\n",
+    "data_imputed_featureDrop.to_csv('data_imputed_featureDrop.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scaling Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "\n",
+    "columns_to_normalize = ['Lagging_Current_Reactive.Power_kVarh', 'Leading_Current_Reactive_Power_kVarh', 'Lagging_Current_Power_Factor', 'NSM']\n",
+    "\n",
+    "data_drop_featureDrop_normalized = data_drop_featureDrop.copy()\n",
+    "data_drop_featureDrop_normalized[columns_to_normalize] = scaler.fit_transform(data_drop_featureDrop_normalized[columns_to_normalize])\n",
+    "\n",
+    "data_drop_featureDrop_normalized.to_csv('data_drop_featureDrop_normalized.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "\n",
+    "columns_to_normalize = ['Lagging_Current_Reactive.Power_kVarh', 'Leading_Current_Reactive_Power_kVarh', 'Lagging_Current_Power_Factor', 'NSM']\n",
+    "\n",
+    "data_imputed_featureDrop_normalized = data_imputed_featureDrop.copy()\n",
+    "data_imputed_featureDrop_normalized[columns_to_normalize] = scaler.fit_transform(data_imputed_featureDrop_normalized[columns_to_normalize])\n",
+    "\n",
+    "data_imputed_featureDrop_normalized.to_csv('data_imputed_featureDrop_normalized.csv', index=False)\n"
    ]
   }
  ],
