added multiple models

--- a/Energy_Consumption_Pred.ipynb
+++ b/Energy_Consumption_Pred.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,13 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.ensemble import RandomForestRegressor"
    ]
   },
   {
@@ -31,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -964,9 +970,9 @@
      "output_type": "stream",
      "text": [
       "Mapping of categories to encoded values for 'Load_Type':\n",
-      "0: 0\n",
-      "1: 1\n",
-      "2: 2\n",
+      "Light_Load: 0\n",
+      "Maximum_Load: 1\n",
+      "Medium_Load: 2\n",
       "Columns in data_no_outliers_drop_encoded:\n",
       "Index(['Id', 'date', 'Lagging_Current_Reactive.Power_kVarh',\n",
       "       'Leading_Current_Reactive_Power_kVarh', 'CO2(tCO2)',\n",
@@ -998,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1006,9 +1012,9 @@
      "output_type": "stream",
      "text": [
       "Mapping of categories to encoded values for 'Load_Type':\n",
-      "0: 0\n",
-      "1: 1\n",
-      "2: 2\n",
+      "Light_Load: 0\n",
+      "Maximum_Load: 1\n",
+      "Medium_Load: 2\n",
       "Columns in data_no_outliers_imputed_encoded:\n",
       "Index(['Id', 'date', 'Lagging_Current_Reactive.Power_kVarh',\n",
       "       'Leading_Current_Reactive_Power_kVarh', 'CO2(tCO2)',\n",
@@ -1047,20 +1053,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'CO2(tCO2)', 'Leading_Current_Power_Factor', 'WeekStatus_Weekend'}\n"
+      "{'WeekStatus_Weekend', 'Leading_Current_Power_Factor', 'CO2(tCO2)'}\n"
      ]
     }
    ],
    "source": [
-    "#data_no_outliers_drop_encoded.drop(columns=['Id'], inplace=True)\n",
-    "#data_no_outliers_drop_encoded.drop(columns=['date'], inplace=True)\n",
+    "data_no_outliers_drop_encoded.drop(columns=['Id'], inplace=True)\n",
+    "data_no_outliers_drop_encoded.drop(columns=['date'], inplace=True)\n",
     "\n",
     "correlation_matrix = data_no_outliers_drop_encoded.corr()\n",
     "\n",
@@ -1081,20 +1087,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'CO2(tCO2)', 'Leading_Current_Power_Factor', 'WeekStatus_Weekend'}\n"
+      "{'WeekStatus_Weekend', 'Leading_Current_Power_Factor', 'CO2(tCO2)'}\n"
      ]
     }
    ],
    "source": [
-    "#data_no_outliers_imputed_encoded.drop(columns=['Id'], inplace=True)\n",
-    "#data_no_outliers_imputed_encoded.drop(columns=['data'], inplace=True)\n",
+    "data_no_outliers_imputed_encoded.drop(columns=['Id'], inplace=True)\n",
+    "data_no_outliers_imputed_encoded.drop(columns=['date'], inplace=True)\n",
     "\n",
     "correlation_matrix = data_no_outliers_imputed_encoded.corr()\n",
     "\n",
@@ -1122,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,6 +1156,204 @@
     "data_imputed_featureDrop_normalized[columns_to_normalize] = scaler.fit_transform(data_imputed_featureDrop_normalized[columns_to_normalize])\n",
     "\n",
     "data_imputed_featureDrop_normalized.to_csv('data_imputed_featureDrop_normalized.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Splitting Data into Training and Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['Lagging_Current_Reactive.Power_kVarh', 'Leading_Current_Reactive_Power_kVarh',\n",
+    "            'Lagging_Current_Power_Factor', 'NSM', 'Load_Type', 'Day_of_week_Friday',\n",
+    "            'Day_of_week_Monday', 'Day_of_week_Saturday', 'Day_of_week_Sunday',\n",
+    "            'Day_of_week_Thursday', 'Day_of_week_Tuesday', 'Day_of_week_Wednesday',\n",
+    "            'WeekStatus_Weekday']\n",
+    "\n",
+    "target = 'Usage_kWh'\n",
+    "\n",
+    "X_drop = data_drop_featureDrop_normalized[features]\n",
+    "y_drop = data_drop_featureDrop_normalized[target]\n",
+    "\n",
+    "X_impute = data_imputed_featureDrop_normalized[features]\n",
+    "y_impute = data_imputed_featureDrop_normalized[target]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simple Linear Regression Validation MSE: 93.98784041346018\n",
+      "Simple Linear Regression Test MSE: 100.84077565078069\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_temp, y_train, y_temp = train_test_split(X_drop, y_drop, test_size=0.4, random_state=42)\n",
+    "X_validation, X_test, y_validation, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "simple_linear_reg = LinearRegression()\n",
+    "simple_linear_reg.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_validation = simple_linear_reg.predict(X_validation)\n",
+    "\n",
+    "mse_validation = mean_squared_error(y_validation, y_pred_validation)\n",
+    "print(\"Simple Linear Regression Validation MSE:\", mse_validation)\n",
+    "\n",
+    "y_pred_test = simple_linear_reg.predict(X_test)\n",
+    "\n",
+    "mse_test = mean_squared_error(y_test, y_pred_test)\n",
+    "print(\"Simple Linear Regression Test MSE:\", mse_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiple Linear Regression Validation MSE: 99.25288464695842\n",
+      "Multiple Linear Regression Test MSE: 99.23280526576269\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_temp, X_test, y_train_temp, y_test = train_test_split(X_impute, y_impute, test_size=0.4, random_state=42)\n",
+    "X_validation, X_test, y_validation, y_test = train_test_split(X_train_temp, y_train_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "multiple_linear_reg = LinearRegression()\n",
+    "multiple_linear_reg.fit(X_train_temp, y_train_temp)\n",
+    "\n",
+    "y_pred_validation = multiple_linear_reg.predict(X_validation)\n",
+    "\n",
+    "mse_validation = mean_squared_error(y_validation, y_pred_validation)\n",
+    "print(\"Multiple Linear Regression Validation MSE:\", mse_validation)\n",
+    "\n",
+    "y_pred_test = multiple_linear_reg.predict(X_test)\n",
+    "\n",
+    "mse_test = mean_squared_error(y_test, y_pred_test)\n",
+    "print(\"Multiple Linear Regression Test MSE:\", mse_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polynomial Regression Validation MSE: 9.218951735411089\n",
+      "Polynomial Regression Test MSE: 8.470678180758608\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_temp, X_test, y_train_temp, y_test = train_test_split(X_drop, y_drop, test_size=0.4, random_state=42)\n",
+    "X_validation, X_test, y_validation, y_test = train_test_split(X_train_temp, y_train_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "poly_features = PolynomialFeatures(degree=4)\n",
+    "X_train_poly = poly_features.fit_transform(X_train_temp)\n",
+    "X_validation_poly = poly_features.transform(X_validation)\n",
+    "X_test_poly = poly_features.transform(X_test)\n",
+    "\n",
+    "poly_reg = LinearRegression()\n",
+    "poly_reg.fit(X_train_poly, y_train_temp)\n",
+    "\n",
+    "y_pred_validation = poly_reg.predict(X_validation_poly)\n",
+    "\n",
+    "mse_validation = mean_squared_error(y_validation, y_pred_validation)\n",
+    "print(\"Polynomial Regression Validation MSE:\", mse_validation)\n",
+    "\n",
+    "y_pred_test = poly_reg.predict(X_test_poly)\n",
+    "\n",
+    "mse_test = mean_squared_error(y_test, y_pred_test)\n",
+    "print(\"Polynomial Regression Test MSE:\", mse_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lasso Regression Validation MSE: 54.901046314058355\n",
+      "Lasso Regression Test MSE: 55.38767238904879\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_temp, X_test, y_train_temp, y_test = train_test_split(X_drop, y_drop, test_size=0.4, random_state=42)\n",
+    "X_validation, X_test, y_validation, y_test = train_test_split(X_train_temp, y_train_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "poly_features = PolynomialFeatures(degree=4)\n",
+    "X_train_poly = poly_features.fit_transform(X_train_temp)\n",
+    "X_validation_poly = poly_features.transform(X_validation)\n",
+    "X_test_poly = poly_features.transform(X_test)\n",
+    "\n",
+    "lasso_reg = Lasso(alpha=1.0)\n",
+    "lasso_reg.fit(X_train_poly, y_train_temp)\n",
+    "\n",
+    "y_pred_validation = lasso_reg.predict(X_validation_poly)\n",
+    "\n",
+    "mse_validation = mean_squared_error(y_validation, y_pred_validation)\n",
+    "print(\"Lasso Regression Validation MSE:\", mse_validation)\n",
+    "\n",
+    "y_pred_test = lasso_reg.predict(X_test_poly)\n",
+    "\n",
+    "mse_test = mean_squared_error(y_test, y_pred_test)\n",
+    "print(\"Lasso Regression Test MSE:\", mse_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Regression Validation MSE: 0.3237789898359068\n",
+      "Random Forest Regression Test MSE: 0.28236582572482377\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_temp, X_test, y_train_temp, y_test = train_test_split(X_drop, y_drop, test_size=0.4, random_state=42)\n",
+    "X_validation, X_test, y_validation, y_test = train_test_split(X_train_temp, y_train_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "random_forest_reg = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "random_forest_reg.fit(X_train_temp, y_train_temp)\n",
+    "\n",
+    "y_pred_validation = random_forest_reg.predict(X_validation)\n",
+    "\n",
+    "mse_validation = mean_squared_error(y_validation, y_pred_validation)\n",
+    "print(\"Random Forest Regression Validation MSE:\", mse_validation)\n",
+    "\n",
+    "y_pred_test = random_forest_reg.predict(X_test)\n",
+    "\n",
+    "mse_test = mean_squared_error(y_test, y_pred_test)\n",
+    "print(\"Random Forest Regression Test MSE:\", mse_test)"
    ]
   }
  ],
