--- a/Energy_Consumption_Pred_2.ipynb
+++ b/Energy_Consumption_Pred_2.ipynb
@@ -2268,34 +2268,7 @@
         "plt.legend(loc='upper right')\n",
         "plt.title('Learning Curve')\n",
         "\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "# import matplotlib.pyplot as plt\n",
-        "# from sklearn.model_selection import learning_curve\n",
-        "\n",
-        "# train_sizes, train_scores, test_scores = learning_curve(\n",
-        "#     estimator=best_model_lasso,\n",
-        "#     X=np.concatenate((X_train, X_val)),\n",
-        "#     y=np.concatenate((y_train, y_val)),\n",
-        "#     train_sizes=np.linspace(0.1, 1.0, 10),\n",
-        "#     cv=kf,\n",
-        "#     scoring='neg_mean_squared_error'\n",
-        "# )\n",
-        "\n",
-        "# train_mean = -np.mean(train_scores, axis=1)\n",
-        "# train_std = np.std(train_scores, axis=1)\n",
-        "# test_mean = -np.mean(test_scores, axis=1)\n",
-        "# test_std = np.std(test_scores, axis=1)\n",
-        "\n",
-        "# plt.figure(figsize=(10, 6))\n",
-        "# plt.plot(train_sizes, test_mean, color='green', linestyle='--', marker='s', markersize=5, label='Validation error')\n",
-        "# plt.fill_between(train_sizes, test_mean - test_std, test_mean + test_std, alpha=0.15, color='green')\n",
-        "# plt.xlabel('Number of training samples')\n",
-        "# plt.ylabel('Negative Mean Squared Error')\n",
-        "# plt.legend(loc='upper right')\n",
-        "# plt.title('Validation Error vs. Number of Training Samples')\n",
-        "# plt.show()\n"
+        "plt.show()\n"
       ]
     },
     {
